--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,7 @@
     <!-- your app's js -->
     <script src="js/Chart.js"></script>
     <script src="js/angular-chart.js"></script>
+    <script src="js/directives.js"></script>
     <script src="js/userstore.js"></script>
     <script src="js/app.js"></script>
   </head>
